add index pages

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 	<title>Lucy's Docs</title>
 	<link rel="stylesheet" href="https://branding.lucyy.me/lucy.css">
 	<style>
+
 a {
 	color: white;
+}
+
+.flowbox {
+	margin: 1em;
+}
+
+.flowbox div {
+	padding: 1em;
+	flex-basis: 7em;
+	width: 7em;
+	font-size: 1.4em;
+	flex-grow: 0;
 }
 	</style>
 </head>
 <body class="bg-dark">
 	<div class="header">Lucy's Docs</div>
-	<h1>404</h1>
-	<h3>Not Found</h3>
-	<h4><a href="/">Go Home</a></h4>
+	<div class="flowbox">
+		<div class="bg-dark-grey" onclick="window.location='/pronouns'">ProNouns</div>
+	</div>
 </body>
 </html>
