update discord server link

--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -96,7 +96,7 @@
 This manual aims to show you everything you need to use the plugin, 
 and will be updated as the plugin gets updated.</p>
 <p>If there's anything that you need help with, or something you'd like
-to see added to the plugin, stop by my <a href="https://discord.gg/8GU6dsRss3">Discord server</a> 
+to see added to the plugin, stop by my <a href="https://discord.gg/Zk9HRuz4ZZ">Discord server</a> 
 and I'll try my best. :)</p>
 <h3 id="setting-your-pronouns">Setting your pronouns</h3>
 <p><a href="formats/#setting-your-pronouns">This page has moved</a>.</p></div>
